--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,19 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		
+	
+		<!--mybatis-->
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis</artifactId>
+		    <version>3.5.7</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis-spring</artifactId>
+		    <version>2.0.7</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
         <dependency>
           <groupId>org.apache.commons</groupId>
